--- a/src/index.html
+++ b/src/index.html
@@ -1,1 +1,52 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Styled To-Do List</title>
+</head>
+<body>
+    <h1>To-Do list</h1>
+    <div class="container">
+    <ul class="todo-list">
+        <li>
+            <input type="checkbox" id="first">
+            <label for="first">Explore gaming keyboards</label>
+            <ul class="sub-item">
+                <li>
+                    <a class="sub-item-link" href="" target="_blank">Store link</a>
+                </li>
+            </ul>
+        </li>
+        <li>
+            <input type="checkbox" id="second">
+            <label for="second">Finish the report</label>
+            <ul class="sub-item">
+                <li>
+                    <a class="sub-item-link" href="" target="_blank">Request Access</a>
+                </li>
+            </ul>
+        </li>
+        <li>
+            <input type="checkbox" id="third">
+            <label for="third">View Phone's Warranty</label>
+            <ul class="sub-item">
+                <li>
+                    <a class="sub-item-link" href="" target="_blank">View Receipts</a>
+                </li>
+            </ul>
+        </li>
+        <li>
+            <input type="checkbox" id="fourth">
+            <label for="fourth">Check Processor Specs</label>
+            <ul class="sub-item">
+                <li>
+                    <a class="sub-item-link" href="" target="_blank">View Model Number</a>
+                </li>
+            </ul>
+        </li>
+    </ul>
+    </div>
+    
+</body>
+</html>
