--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>Styled To-Do List</title>
+    <style type="text/css">
+    </style>
 </head>
 <body>
     <h1>To-Do list</h1>
