--- a/index.html
+++ b/index.html
@@ -2,10 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="/style.css">
     <title>Styled To-Do List</title>
-    <style type="text/css">
-    </style>
 </head>
 <body>
     <h1>To-Do list</h1>
