--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/main/style.css">
+    <link rel="stylesheet" href="https://github.com/Mansurion/MANS-firs-repository/blob/main/style.css">
     <title>Styled To-Do List</title>
 </head>
 <body>
