--- a/index.html
+++ b/index.html
@@ -1,52 +1,137 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="change.css">
     <title>Styled To-Do List</title>
 </head>
+
 <body>
     <h1>To-Do list</h1>
-    <div class="container">
-    <ul class="todo-list">
-        <li>
-            <input type="checkbox" id="first">
-            <label for="first">Explore gaming keyboards</label>
-            <ul class="sub-item">
-                <li>
-                    <a class="sub-item-link" href="" target="_blank">Store link</a>
-                </li>
-            </ul>
-        </li>
-        <li>
-            <input type="checkbox" id="second">
-            <label for="second">Finish the report</label>
-            <ul class="sub-item">
-                <li>
-                    <a class="sub-item-link" href="" target="_blank">Request Access</a>
-                </li>
-            </ul>
-        </li>
-        <li>
-            <input type="checkbox" id="third">
-            <label for="third">View Phone's Warranty</label>
-            <ul class="sub-item">
-                <li>
-                    <a class="sub-item-link" href="" target="_blank">View Receipts</a>
-                </li>
-            </ul>
-        </li>
-        <li>
-            <input type="checkbox" id="fourth">
-            <label for="fourth">Check Processor Specs</label>
-            <ul class="sub-item">
-                <li>
-                    <a class="sub-item-link" href="" target="_blank">View Model Number</a>
-                </li>
-            </ul>
-        </li>
-    </ul>
+    <div>
+        <ul>
+            <li>
+                <label>
+                    <input type="checkbox">
+                    <span>МОНИТОР</span>
+                </label>
+                <ul>
+                    <label>
+                        <input type="checkbox">
+                        <span>OLED</span>
+                    </label>
+                </ul>
+                <ul>
+                    <label>
+                        <input type="checkbox">
+                        <span>IPS</span>
+                    </label>
+                </ul>
+                <ul>
+                    <label>
+                        <input type="checkbox">
+                        <span>TN</span>
+                    </label>
+                </ul>
+                <ul>
+                    <label>
+                        <input type="checkbox">
+                        <span>VA</span>
+                    </label>
+                </ul>
+            </li>
+            <li>
+                <label>
+                    <input type="checkbox">
+                    <span>КЛАВИАТУРА</span>
+                </label>
+                <ul>
+                    <label>
+                        <input type="checkbox">
+                        <span>МАГНИТНАЯ</span>
+                    </label>
+                </ul>
+                <ul>
+                    <label>
+                        <input type="checkbox">
+                        <span>МЕХАНИЧЕСКАЯ</span>
+                    </label>
+                </ul>
+                <ul>
+                    <label>
+                        <input type="checkbox">
+                        <span>НОЖНИЧНАЯ</span>
+                    </label>
+                </ul>
+                <ul>
+                    <label>
+                        <input type="checkbox">
+                        <span>МЕМБРАННАЯ</span>
+                    </label>
+                </ul>
+            </li>
+            <li>
+                <label>
+                    <input type="checkbox">
+                    <span>INTEL</span>
+                </label>
+                <ul>
+                    <label>
+                        <input type="checkbox">
+                        <span>I3</span>
+                    </label>
+                </ul>
+                <ul>
+                    <label>
+                        <input type="checkbox">
+                        <span>I5</span>
+                    </label>
+                </ul>
+                <ul>
+                    <label>
+                        <input type="checkbox">
+                        <span>I7</span>
+                    </label>
+                </ul>
+                <ul>
+                    <label>
+                        <input type="checkbox">
+                        <span>I9</span>
+                    </label>
+                </ul>
+            </li>
+            <li>
+                <label>
+                    <input type="checkbox">
+                    <span>NVIDIA</span>
+                </label>
+                <ul>
+                    <label>
+                        <input type="checkbox">
+                        <span>3060</span>
+                    </label>
+                </ul>
+                <ul>
+                    <label>
+                        <input type="checkbox">
+                        <span>3070</span>
+                    </label>
+                </ul>
+                <ul>
+                    <label>
+                        <input type="checkbox">
+                        <span>3080</span>
+                    </label>
+                </ul>
+                <ul>
+                    <label>
+                        <input type="checkbox">
+                        <span>3090</span>
+                    </label>
+                </ul>
+            </li>
+        </ul>
     </div>
-    
+
 </body>
-</html>
