--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1>To-Do list</h1>
     <div>
-        <ul>
+        <ul class="main">
             <li>
                 <label>
                     <input type="checkbox">
@@ -131,6 +131,8 @@
                     </label>
                 </ul>
             </li>
+            <input type="submit" value="Accept">
+            <input type="submit" value="Decline">
         </ul>
     </div>
 
