--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                 </ul>
             </li>
             <input type="submit" value="Accept">
-            <input type="submit" value="Decline">
+            <input type="submit" value="Reject">
         </ul>
     </div>
 
