--- a/index.html
+++ b/index.html
@@ -8,132 +8,136 @@
 </head>
 
 <body>
-    <h1>To-Do list</h1>
-    <div>
-        <ul class="main">
-            <li>
-                <label>
+        <h1>To-Do list</h1>
+        <div class="first">
+            <div class="second">
+                <div class="third">
+                    <label>
                     <input type="checkbox">
                     <span>МОНИТОР</span>
-                </label>
-                <ul>
-                    <label>
-                        <input type="checkbox">
-                        <span>OLED</span>
                     </label>
-                </ul>
-                <ul>
+                </div>
+                <div class="fourth">
                     <label>
-                        <input type="checkbox">
-                        <span>IPS</span>
-                    </label>
-                </ul>
-                <ul>
-                    <label>
-                        <input type="checkbox">
-                        <span>TN</span>
-                    </label>
-                </ul>
-                <ul>
-                    <label>
-                        <input type="checkbox">
-                        <span>VA</span>
-                    </label>
-                </ul>
-            </li>
-            <li>
-                <label>
                     <input type="checkbox">
-                    <span>КЛАВИАТУРА</span>
-                </label>
-                <ul>
-                    <label>
-                        <input type="checkbox">
-                        <span>МАГНИТНАЯ</span>
+                    <span>OLED</span>
                     </label>
-                </ul>
-                <ul>
+                </div>
+                <div class="fourth">
                     <label>
-                        <input type="checkbox">
-                        <span>МЕХАНИЧЕСКАЯ</span>
+                    <input type="checkbox">
+                    <span>IPS</span>
                     </label>
-                </ul>
-                <ul>
+                </div>
+                <div class="fourth">
                     <label>
-                        <input type="checkbox">
-                        <span>НОЖНИЧНАЯ</span>
+                    <input type="checkbox">
+                    <span>TN</span>
                     </label>
-                </ul>
-                <ul>
+                </div>
+                <div class="fourth">
                     <label>
-                        <input type="checkbox">
-                        <span>МЕМБРАННАЯ</span>
+                    <input type="checkbox">
+                    <span>VA</span>
                     </label>
-                </ul>
-            </li>
-            <li>
-                <label>
+                </div>
+            </div>
+            <div class="second">
+                <div class="third">
+                    <label>
                     <input type="checkbox">
                     <span>INTEL</span>
-                </label>
-                <ul>
-                    <label>
-                        <input type="checkbox">
-                        <span>I3</span>
                     </label>
-                </ul>
-                <ul>
+                </div>
+                <div class="fourth">
                     <label>
-                        <input type="checkbox">
-                        <span>I5</span>
+                    <input type="checkbox">
+                    <span>I3</span>
                     </label>
-                </ul>
-                <ul>
+                </div>
+                <div class="fourth">
                     <label>
-                        <input type="checkbox">
-                        <span>I7</span>
+                    <input type="checkbox">
+                    <span>I5</span>
                     </label>
-                </ul>
-                <ul>
+                </div>
+                <div class="fourth">
                     <label>
-                        <input type="checkbox">
-                        <span>I9</span>
+                    <input type="checkbox">
+                    <span>I7</span>
                     </label>
-                </ul>
-            </li>
-            <li>
-                <label>
+                </div>
+                <div class="fourth">
+                    <label>
+                    <input type="checkbox">
+                    <span>I9</span>
+                    </label>
+                </div>
+            </div>
+            <div class="second">
+                <div class="third">
+                    <label>
                     <input type="checkbox">
                     <span>NVIDIA</span>
-                </label>
-                <ul>
-                    <label>
-                        <input type="checkbox">
-                        <span>3060</span>
                     </label>
-                </ul>
-                <ul>
+                </div>
+                <div class="fourth">
                     <label>
-                        <input type="checkbox">
-                        <span>3070</span>
+                    <input type="checkbox">
+                    <span>3060</span>
                     </label>
-                </ul>
-                <ul>
+                </div>
+                <div class="fourth">
                     <label>
-                        <input type="checkbox">
-                        <span>3080</span>
+                    <input type="checkbox">
+                    <span>3070</span>
                     </label>
-                </ul>
-                <ul>
+                </div>
+                <div class="fourth">
                     <label>
-                        <input type="checkbox">
-                        <span>3090</span>
+                    <input type="checkbox">
+                    <span>3080</span>
                     </label>
-                </ul>
-            </li>
-            <input type="submit" value="Accept">
-            <input type="submit" value="Reject">
-        </ul>
-    </div>
+                </div>
+                <div class="fourth">
+                    <label>
+                    <input type="checkbox">
+                    <span>3090</span>
+                    </label>
+                </div>
+            </div>
+            <div class="second">
+                <div class="third">
+                    <label>
+                    <input type="checkbox">
+                    <span>КЛАВИАТУРА</span>
+                    </label>
+                </div>
+                <div class="fourth">
+                    <label>
+                    <input type="checkbox">
+                    <span>МАГНИТНАЯ</span>
+                    </label>
+                </div>
+                <div class="fourth">
+                    <label>
+                    <input type="checkbox">
+                    <span>МЕХАНИЧЕСКАЯ</span>
+                    </label>
+                </div>
+                <div class="fourth">
+                    <label>
+                    <input type="checkbox">
+                    <span>НОЖНИЧНАЯ</span>
+                    </label>
+                </div>
+                <div class="fourth">
+                    <label>
+                    <input type="checkbox">
+                    <span>МЕМБРАННАЯ</span>
+                    </label>
+                </div>
+            </div>
+        </div>
 
 </body>
