Revert "body flex"

--- a/index.html
+++ b/index.html
@@ -8,139 +8,130 @@
 </head>
 
 <body>
-        <h1>To-Do list</h1>
-        <div class="container">
-            <div class="item">
-                <div class="title">
-                    <label for="checkbox1">
-                    <input type="checkbox" id="checkbox1" value="checkbox_value">
+    <h1>To-Do list</h1>
+    <div>
+        <ul>
+            <li>
+                <label>
+                    <input type="checkbox">
                     <span>МОНИТОР</span>
+                </label>
+                <ul>
+                    <label>
+                        <input type="checkbox">
+                        <span>OLED</span>
                     </label>
-                </div>
-                <div class="sub-item">
-                    <label for="radio1">
-                    <input type="radio" name="МОНИТОР" id="radio1" value="option1">
-                    <span>OLED</span>
+                </ul>
+                <ul>
+                    <label>
+                        <input type="checkbox">
+                        <span>IPS</span>
                     </label>
-                </div>
-                <div class="sub-item">
-                    <label for="radio2">
-                    <input type="radio" name="МОНИТОР" id="radio2" value="option2">
-                    <span>IPS</span>
+                </ul>
+                <ul>
+                    <label>
+                        <input type="checkbox">
+                        <span>TN</span>
                     </label>
-                </div>
-                <div class="sub-item">
-                    <label for="radio3">
-                    <input type="radio" name="МОНИТОР" id="radio3" value="option3">
-                    <span>TN</span>
+                </ul>
+                <ul>
+                    <label>
+                        <input type="checkbox">
+                        <span>VA</span>
                     </label>
-                </div>
-                <div class="sub-item">
-                    <label for="radio4">
-                    <input type="radio" name="МОНИТОР" id="radio4" value="option4">
-                    <span>VA</span>
-                    </label>
-                </div>
-            </div>
-            <div class="item">
-                <div class="title">
-                    <label for="checkbox2">
-                    <input type="checkbox" id="checkbox2" value="checkbox_value">
-                    <span>INTEL</span>
-                    </label>
-                </div>
-                <div class="sub-item">
-                    <label for="radio5">
-                    <input type="radio" name="INTEL" id="radio5" value="option5">
-                    <span>I3</span>
-                    </label>
-                </div>
-                <div class="sub-item">
-                    <label for="radio6">
-                    <input type="radio" name="INTEL" id="radio6" value="option6">
-                    <span>I5</span>
-                    </label>
-                </div>
-                <div class="sub-item">
-                    <label for="radio7">
-                    <input type="radio" name="INTEL" id="radio7" value="option7">
-                    <span>I7</span>
-                    </label>
-                </div>
-                <div class="sub-item">
-                    <label for="radio8">
-                    <input type="radio" name="INTEL" id="radio8" value="option8">
-                    <span>I9</span>
-                    </label>
-                </div>
-            </div>
-            <div class="item">
-                <div class="title">
-                    <label for="checkbox3">
-                    <input type="checkbox" id="checkbox3" value="checkbox_value">
-                    <span>NVIDIA</span>
-                    </label>
-                </div>
-                <div class="sub-item">
-                    <label for="radio9">
-                    <input type="radio" name="NVIDIA" id="radio9" value="option9">
-                    <span>3060</span>
-                    </label>
-                </div>
-                <div class="sub-item">
-                    <label for="radio10">
-                    <input type="radio" name="NVIDIA" id="radio10" value="option10">
-                    <span>3070</span>
-                    </label>
-                </div>
-                <div class="sub-item">
-                    <label for="radio11">
-                    <input type="radio" name="NVIDIA" id="radio11" value="option11">
-                    <span>3080</span>
-                    </label>
-                </div>
-                <div class="sub-item">
-                    <label for="radio12">
-                    <input type="radio" name="NVIDIA" id="radio12" value="option12">
-                    <span>3090</span>
-                    </label>
-                </div>
-            </div>
-            <div class="item">
-                <div class="title">
-                    <label for="checkbox4">
-                    <input type="checkbox" id="checkbox4" value="checkbox_value">
+                </ul>
+            </li>
+            <li>
+                <label>
+                    <input type="checkbox">
                     <span>КЛАВИАТУРА</span>
+                </label>
+                <ul>
+                    <label>
+                        <input type="checkbox">
+                        <span>МАГНИТНАЯ</span>
                     </label>
-                </div>
-                <div class="sub-item">
-                    <label for="radio13">
-                    <input type="radio" name="КЛАВИАТУРА" id="radio13" value="option13">
-                    <span>МАГНИТНАЯ</span>
+                </ul>
+                <ul>
+                    <label>
+                        <input type="checkbox">
+                        <span>МЕХАНИЧЕСКАЯ</span>
                     </label>
-                </div>
-                <div class="sub-item">
-                    <label for="radio14">
-                    <input type="radio" name="КЛАВИАТУРА" id="radio14" value="option14">
-                    <span>МЕХАНИЧЕСКАЯ</span>
+                </ul>
+                <ul>
+                    <label>
+                        <input type="checkbox">
+                        <span>НОЖНИЧНАЯ</span>
                     </label>
-                </div>
-                <div class="sub-item">
-                    <label for="radio15">
-                    <input type="radio" name="КЛАВИАТУРА" id="radio15" value="option15">
-                    <span>НОЖНИЧНАЯ</span>
+                </ul>
+                <ul>
+                    <label>
+                        <input type="checkbox">
+                        <span>МЕМБРАННАЯ</span>
                     </label>
-                </div>
-                <div class="sub-item">
-                    <label for="radio16">
-                    <input type="radio" name="КЛАВИАТУРА" id="radio16" value="option16">
-                    <span>МЕМБРАННАЯ</span>
+                </ul>
+            </li>
+            <li>
+                <label>
+                    <input type="checkbox">
+                    <span>INTEL</span>
+                </label>
+                <ul>
+                    <label>
+                        <input type="checkbox">
+                        <span>I3</span>
                     </label>
-                </div>
-            </div>
-        </div>
-        <form action="second.page.html">
-            <input class="accetp" type="submit" value="accetp">
-        </form>
+                </ul>
+                <ul>
+                    <label>
+                        <input type="checkbox">
+                        <span>I5</span>
+                    </label>
+                </ul>
+                <ul>
+                    <label>
+                        <input type="checkbox">
+                        <span>I7</span>
+                    </label>
+                </ul>
+                <ul>
+                    <label>
+                        <input type="checkbox">
+                        <span>I9</span>
+                    </label>
+                </ul>
+            </li>
+            <li>
+                <label>
+                    <input type="checkbox">
+                    <span>NVIDIA</span>
+                </label>
+                <ul>
+                    <label>
+                        <input type="checkbox">
+                        <span>3060</span>
+                    </label>
+                </ul>
+                <ul>
+                    <label>
+                        <input type="checkbox">
+                        <span>3070</span>
+                    </label>
+                </ul>
+                <ul>
+                    <label>
+                        <input type="checkbox">
+                        <span>3080</span>
+                    </label>
+                </ul>
+                <ul>
+                    <label>
+                        <input type="checkbox">
+                        <span>3090</span>
+                    </label>
+                </ul>
+            </li>
+        </ul>
+    </div>
+
 </body>
-<script src="core.js"></script>
